--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,8 +37,8 @@
                       <tr>
                         <th scope="row" class="text-center">1</th>
                         <td class="w-1/2" style="min-width: 200px;">
-                          <a href="<%= hosting %>/<%= item.url_id %>" target="_blank">
-                            <%= hosting %>/<%= item.url_id %>
+                          <a href=<%="/" + item.url_id %> target="_blank">
+                            <%= hosting + "/" + item.url_id %>
                           </a>
                         </td>
                         <td class="w-1/2" style="min-width: 200px;">
